test/message/stdin_messages.out
[stdin]

vm.js:26
  return new binding.ContextifyScript(code, filename);
         ^
SyntaxError: Strict mode code may not include a with statement
    at Object.exports.createScript (vm.js:*:*)
    at Object.exports.runInThisContext (vm.js:*:*)
    at Object.<anonymous> ([stdin]-wrapper:*:*)
    at Module._compile (module.js:*:*)
    at evalScript (node.js:*:*)
    at Socket.<anonymous> (node.js:*:*)
    at Socket.EventEmitter.emit (events.js:*:*)
    at _stream_readable.js:*:*
    at process._tickCallback (node.js:*:*)
42
42

vm.js:53
  return script.runInThisContext(timeout);
                ^
Error: hello
    at [stdin]:1:7
    at Object.exports.runInThisContext (vm.js:*:*)
    at Object.<anonymous> ([stdin]-wrapper:*:*)
    at Module._compile (module.js:*:*)
    at evalScript (node.js:*:*)
    at Socket.<anonymous> (node.js:*:*)
    at Socket.EventEmitter.emit (events.js:*:*)
    at _stream_readable.js:*:*
    at process._tickCallback (node.js:*:*)

vm.js:53
  return script.runInThisContext(timeout);
                ^
Error: hello
    at [stdin]:1:7
    at Object.exports.runInThisContext (vm.js:*:*)
    at Object.<anonymous> ([stdin]-wrapper:*:*)
    at Module._compile (module.js:*:*)
    at evalScript (node.js:*:*)
    at Socket.<anonymous> (node.js:*:*)
    at Socket.EventEmitter.emit (events.js:*:*)
    at _stream_readable.js:*:*
    at process._tickCallback (node.js:*:*)
100

vm.js:53
  return script.runInThisContext(timeout);
                ^
ReferenceError: y is not defined
    at [stdin]:1:16
    at Object.exports.runInThisContext (vm.js:*:*)
    at Object.<anonymous> ([stdin]-wrapper:*:*)
    at Module._compile (module.js:*:*)
    at evalScript (node.js:*:*)
    at Socket.<anonymous> (node.js:*:*)
    at Socket.EventEmitter.emit (events.js:*:*)
    at _stream_readable.js:*:*
    at process._tickCallback (node.js:*:*)

vm.js:53
  return script.runInThisContext(timeout);
                ^
10

vm.js:53
  return script.runInThisContext(timeout);
                ^
10
done

